...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7t4-xO-DkC">
                                <rect key="frame" x="110" y="429" width="155" height="36"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <color key="backgroundColor" name="keyboardFocusIndicatorColor" catalog="System" colorSpace="catalog"/>
                                <state key="normal" title="Generate">
                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
                                <connections>
                                    <action selector="generate" destination="BYZ-38-t0r" eventType="touchUpInside" id="14x-M1-qPv"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aUU-UO-abT">
                                <rect key="frame" x="110" y="473" width="155" height="36"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <color key="backgroundColor" name="keyboardFocusIndicatorColor" catalog="System" colorSpace="catalog"/>
                                <state key="normal" title="Save password">
                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
                                <connections>
                                    <action selector="nextScreen:" destination="BYZ-38-t0r" eventType="primaryActionTriggered" id="xKY-dL-HgX"/>
                                    <segue destination="zjG-b6-xtA" kind="show" identifier="goToVC" id="5dz-GU-6R2"/>
                                </connections>
...
                                    <action selector="emojiClicked:" destination="zjG-b6-xtA" eventType="touchUpInside" id="UqC-ld-hJe"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LPm-Oa-gpz">
                                <rect key="frame" x="35" y="411" width="44" height="44"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="hmm" image="Snake"/>
                                <connections>
                                    <action selector="emojiClicked:" destination="zjG-b6-xtA" eventType="touchUpInside" id="pVB-8c-apN"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kA9-Qc-hvD">
                                <rect key="frame" x="87" y="411" width="44" height="44"/>
...
                                    <action selector="emojiClicked:" destination="zjG-b6-xtA" eventType="touchUpInside" id="0Yf-gJ-6Zo"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="a9O-bj-DrG">
                                <rect key="frame" x="191" y="411" width="44" height="44"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="Button" image="RelationshipGoals"/>
                                <connections>
                                    <action selector="emojiClicked:" destination="zjG-b6-xtA" eventType="touchUpInside" id="sBu-0f-TXj"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fkG-PH-iB5">
                                <rect key="frame" x="243" y="411" width="44" height="44"/>
...
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EKm-2j-El4">
                                <rect key="frame" x="45" y="272" width="140" height="36"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <color key="backgroundColor" name="keyboardFocusIndicatorColor" catalog="System" colorSpace="catalog"/>
                                <state key="normal" title="Submit">
                                    <color key="titleColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                                </state>
                                <connections>
                                    <action selector="checkPassword:" destination="zjG-b6-xtA" eventType="touchUpInside" id="ivP-AJ-pdb"/>
                                </connections>
                            </button>
...
