//
//  EmojiPasswordUITests.swift
//  EmojiPasswordUITests
//
//  Created by Mat Schmid on 2017-03-08.
//  Copyright © 2017 Mat Schmid. All rights reserved.
//

import XCTest

class EmojiPasswordUITests: XCTestCase {
        
    override func setUp() {
        super.setUp()
        
        // Put setup code here. This method is called before the invocation of each test method in the class.
        
        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false
        // UI tests must launch the application that they test. Doing this in setup will make sure it happens for each test method.
        XCUIApplication().launch()

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }
    
    override func tearDown() {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
        super.tearDown()
    }
    
    func testExample() {
        // Use recording to get started writing UI tests.
        // Use XCTAssert and related functions to verify your tests produce the correct results.
        
        let app = XCUIApplication()
        let generateButton = app.buttons["Generate"]
        generateButton.tap()
        generateButton.tap()
        generateButton.tap()
        generateButton.tap()
        generateButton.tap()
        app.buttons["Save password"].tap()
        
        let element = app.children(matching: .window).element(boundBy: 0).children(matching: .other).element.children(matching: .other).element
        element.children(matching: .button).matching(identifier: "Button").element(boundBy: 5).tap()
        app.buttons["hmm"].tap()
        element.children(matching: .button).matching(identifier: "Button").element(boundBy: 19).tap()
        element.children(matching: .button).matching(identifier: "Button").element(boundBy: 0).tap()
        app.buttons["Submit"].tap()
        app.buttons["Reset"].tap()
        
    }
    
}
